tests/chapter_17/invalid_types/void/cast_void.c
int main(void) {
    // you can't cast a void expression to another type
    int y = (int) (void) 3;
    return y;
}